# -TicTacToe-Telegram-Bot-

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  heroku.yml  pyproject.toml  setup.cfg
.github/workflows/: Flake8-WPS.yml  TicTacTests.yml
tests/: __init__.py  conftest.py  test_board.py  test_game.py  test_xobot.py
tictactoe/: application.py  board.py  bot_handler.py  db.py  game.py  keyboard.py  xobot.py
tictactoe/scripts/: application.py  board.py  db.py  game.py  keyboard.py  mark.py  player.py  xobot.py
xobot/scripts/: board.py  player.py  xobot.py
