[tool.poetry]
name = "xobot"
version = "0.1.0"
description = ""
authors = ["idilettant <dedenev1985@gmail.com>"]
license = "MIT"
packages = [
  { include = "xobot" },
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xobot = "xobot.scripts.xobot:main"

