[tool.poetry]
name = "xobot"
version = "0.1.0"
description = ""
authors = ["idilettant <dedenev1985@gmail.com>"]
license = "MIT"
packages = [
  { include = "tictactoe" },
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8-cognitive-complexity = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tictactoe = "tictactoe.scripts.xobot:main"
